# CMS-Admin_Dashboard

./: LICENSE
ug-admin/: .editorconfig  .gitignore  README.md  start-dev.sh
ug-admin/backend/: README.md  pyproject.toml
ug-admin/backend/app/: __init__.py  main.py
ug-admin/backend/app/api/v1/: __init__.py  bulk_operations.py  files.py  health.py  notifications.py  search.py  students.py
ug-admin/backend/app/core/: audit.py  auth.py  config.py  db.py  errors.py  logging.py
ug-admin/backend/app/repositories/: __init__.py  students.py
ug-admin/backend/app/schemas/: student.py
ug-admin/backend/app/services/: bulk_operations.py  file_storage.py  notifications.py  search.py  students.py
ug-admin/backend/tests/api/: test_auth.py  test_bulk_operations.py  test_files.py  test_health.py  test_notifications.py  test_readiness.py  test_search.py  test_students.py
ug-admin/backend/tests/unit/: test_db.py
ug-admin/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vitest.config.ts
ug-admin/frontend/src/: index.css
ug-admin/frontend/src/api/: audits.ts  axios.ts  email.ts  files.ts  queryKeys.ts  students.ts
ug-admin/frontend/src/app/: App.tsx  routes.tsx
ug-admin/frontend/src/auth/: Guarded.test.tsx  Guarded.tsx  LoginPage.test.tsx  LoginPage.tsx  firebase.ts  roles.ts
ug-admin/frontend/src/components/: ErrorState.tsx  LoadingState.tsx
ug-admin/frontend/src/data/: mockData.ts
ug-admin/frontend/src/services/: mockApiService.ts
ug-admin/frontend/src/styles/: theme.ts
ug-admin/frontend/src/tests/: setup.ts  utils.tsx
(+18 files in other folders)
